PG-036, PG-038: TEST: should fail if answer is empty